juice-shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
spec:
  selector:
    app: juice-shop
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 32036
