juice-shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
spec:
  rules:
  - host: juice-shop.example.com # Change this to your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-shop
            port:
              name: http
