kubernetes-api-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-api-access
spec:
  podSelector:
    matchLabels:
      component: kube-apiserver
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.1/32
        - ipBlock:
            cidr: 10.0.0.2/32
